// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
Array [
  Object {
    "en": Object {
      "hello": "hello world!",
    },
  },
]
`;

exports[`global 1`] = `
Array [
  Object {
    "en": Object {
      "hello": "hello global!",
    },
  },
]
`;

exports[`global and local 1`] = `
Array [
  Object {
    "ja": Object {
      "hello": "hello local!",
    },
  },
]
`;

exports[`global and local 2`] = `
Array [
  Object {
    "en": Object {
      "hello": "hello global!",
    },
  },
]
`;

exports[`import 1`] = `
Array [
  Object {
    "en": Object {
      "hello": "hello world!",
    },
  },
]
`;

exports[`json5 1`] = `
Array [
  Object {
    "en": Object {
      "hello": "hello world!",
    },
  },
]
`;

exports[`locale attr 1`] = `
Array [
  Object {
    "ja": Object {
      "hello": "こんにちは、世界！",
    },
  },
]
`;

exports[`locale attr and basic 1`] = `
Array [
  Object {
    "en": Object {
      "hello": "hello world!",
    },
  },
  Object {
    "ja": Object {
      "hello": "こんにちは、世界！",
    },
  },
]
`;

exports[`locale attr and import 1`] = `
Array [
  Object {
    "en": Object {
      "hello": "hello world!",
    },
  },
]
`;

exports[`multiple 1`] = `
Array [
  Object {
    "en": Object {
      "hello": "hello world!",
    },
  },
  Object {
    "ja": Object {
      "hello": "こんにちは、世界！",
    },
  },
]
`;

exports[`special characters 1`] = `
Array [
  Object {
    "en": Object {
      "hello": "hello
great	\\"world\\"",
    },
  },
]
`;

exports[`yaml 1`] = `
Array [
  Object {
    "en": Object {
      "hello": "hello world!",
    },
  },
  Object {
    "ja": Object {
      "hello": "こんにちは、世界！",
    },
  },
]
`;
